4.webproduction-changeversion.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
  name: web-production
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: web-production
    spec:
      containers:
      - image: paichayon/demo-php:2
        name: web-production
        ports:
        - containerPort: 80
          protocol: TCP
        resources:
          requests:
            cpu: 200m
