0.grafana-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana-ingress
  annotations: 
     nginx.ingress.kubernetes.io/rewrite-target:  "/"
spec:
  rules:
  - host: monitor.mydemo.local
    http:
      paths:
      - backend:
          serviceName: monitoring-grafana
          servicePort: 80
